# mpi-cluster

./: .fig.yml  .omnifig.yml  README.md  create_job.py  full_run.sh  get_status.py  main.py  purge_jobs.py  requirements.txt  run.sh  setup.cfg  startup.py  submit_jobs.py  template.sh  template_rl.sh
assets/: default_template.sh  file_cache.json  template.sh  todo.sh  vllm-settings.yml  vllm_args.json
cluster_src/: __init__.py  runs.py  status.py
config/: all.yml  cladder.yaml  cluster.yml  code.yaml  debug.yaml  id.yaml  jobs.yaml  jobs.yml  llm.yml  manager.yaml  me.yml  old-jobs.yaml  remote.yml  repos.yaml
config/gpu/: l.yaml  m.yaml  s.yaml  xl.yaml
config/old/: old-jobs.yaml
data/: default_template.sh  full_run.sh  run.sh  run_n.sh  template.sh
data/sae/: run.sh
mpi_cluster/: __init__.py  cluster.py  get_status.py  imports.py  job_writer.py  llms.py  locations.py  misc.py  op.py  purge_jobs.py  remote_helpers.py  runs.py  status.py  status_helpers.py  submit_jobs.py  test_basic.py  unit_tests.py  vllm_server.py
notebooks/: scratch.ipynb
old/: create_job.py  get_status.py  purge_jobs.py  run_rep.sh
old/sae/: run_real.sh  run_sim.sh  run_toy.sh
src/: __init__.py  cluster.py  misc.py  runs.py  status.py  submit_jobs.py
