[metadata]
name = cluster
description = "MPI-Cluster Some simple scripts to run jobs on the MPI cluster"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
version = attr: mpi_cluster.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
